<resources>
    <string name="app_name">Parket</string>

    <!-- Parket Backend -->
    <string name="backend_base">https://parketb.com</string>
    <string name="backend_auth">https://parketb.com/auth</string>
    <string name="backend_auth_callback">https://parketb.com/auth/callback</string>
    <string name="backend_myparkingspaces">https://parketb.com/users/self/parkingspaces</string>
    <string name="backend_search">https://parketb.com/search</string>
    <string name="backend_mybookings">https://parketb.com/users/self/bookings</string>

    <!-- ShowParkingSpacesAroundMe -->
    <string name="title_activity_show_parking_space_around_me">&#160;&#160;Parket</string>
    <string name="text_drawer_find_parking">Find Parking Around Me</string>
    <string name="text_drawer_rent_out">Rent out Parking Space</string>
    <string name="text_drawer_settings">Settings</string>
    <string name="text_drawer_help">Help</string>
    <string name="text_drawer_icon_description">Sidebar List Icon Description</string>
    <string name="text_infowindow_tap_to_book">Tap to book</string>
    <string name="text_check_in">Tap to Check In</string>
    <string name="text_check_out">Tap to Check Out</string>
    <string name="text_tap_to_navigate">Navigate to Parking Space</string>
    <string name="text_advanced_search_location">Results Around This Location</string>


    <!-- LoginActivity -->
    <string name="title_activity_login">Parket</string>
    <string name="description_parket_logo">Parket Logo</string>
    <string name="text_welcome">Welcome to Parket!</string>
    <string name="text_about">Parket is a marketplace which helps you find parking where you need it.
    If you have a parking space to rent, you can add it to our marketplace.</string>
    <string name="shared_pref_key_user_name">userName</string>

    <!-- AdvancedSearch -->
    <string name="title_activity_advanced_search">Advanced Search</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="advancedSearchDateButtonText">Date</string>
    <string name="advancedSearchStartTimeButtonText">Start Time</string>
    <string name="advancedSearchEndTimeButtonText">End Time</string>

    <!-- AddParkingSpace -->
    <string name="title_activity_add_parking_space">Add Parking Space</string>
    <string-array name="states">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="addPhotos">Add Photos</string>

    <!-- ConfirmAddress -->
    <string name="title_activity_confirm_address">Confirm Address</string>

    <!-- VerifyAddressButton -->
    <string name="title_activity_verify_address_button">VerifyAddressButton</string>

    <!-- ParkingSpaceDetails -->
    <string name="title_activity_parking_space_details">Parking Space Details</string>
    <string name="text_parking_space_details_icon_description">ParkingSpaceDetails Icon Description</string>
    <string name="text_parking_space_details_photo_text">Photo</string>
    <string name="btn_parking_space_details_book">Book Now!</string>

    <!--RentParkingSpace -->
    <string name="title_activity_rent_parking_space">&#160;&#160;Rent out Parking Space</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="text_settings_icon_description">Settings Icon Description</string>

    <!--EnableParkingSpace-->
    <string name="title_activity_enable_parking_space">Enable Parking Space</string>
    <string name="enableParkingSpaceDateButtonText">Date</string>
    <string name="enableParkingSpaceStartTimeButtonText">Start Time</string>
    <string name="enableParkingSpaceEndTimeButtonText">End Time</string>

    <!--BookParkingSpace-->
    <string name="title_activity_book_parking_space">Book Parking Space</string>

</resources>
