<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sjsu.cmpe295.parket.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginParketLogo"
        android:contentDescription="@string/description_parket_logo"
        android:src="@drawable/parket_logo"
        android:padding="10dp"
        android:layout_above="@+id/loginWelcomeTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_welcome"
        android:id="@+id/loginWelcomeTextView"
        android:padding="10dp"
        android:layout_above="@+id/loginAboutTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_about"
        android:id="@+id/loginAboutTextView"
        android:padding="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_googleSignIn"
        android:layout_below="@+id/loginAboutTextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
