<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="edu.sjsu.cmpe295.parket.EnableParkingSpace">
    <Toolbar
        android:id="@+id/toolbar_enableParkingSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:weightSum="3">

        <Button
            android:id="@+id/enableParkingSpaceDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_primary_light"
            android:text="@string/advancedSearchDateButtonText"
            android:textAppearance="@style/ToolbarSmallTextStyle"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/enableParkingSpaceStartTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_primary_light"
            android:text="@string/advancedSearchStartTimeButtonText"
            android:textAppearance="@style/ToolbarSmallTextStyle"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/enableParkingSpaceEndTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg_primary_light"
            android:text="@string/advancedSearchEndTimeButtonText"
            android:textAppearance="@style/ToolbarSmallTextStyle"
            android:textAllCaps="false"/>
    </LinearLayout>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enableParkingRate"
        android:hint="Rate"
        android:textSize="14sp"
        android:singleLine="true"
        android:padding="20dp"
        android:layout_marginTop="60dp"
        android:inputType="numberDecimal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enable Parking Space"
        android:id="@+id/enableParkingSpaceOkButton"
        android:background="@drawable/button_bg_accent"
        android:clickable="true"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"/>
</LinearLayout>
